syntax = "proto3";

package knn;

service KNNService {
    rpc findKNearestNeighbors (FindKNNRequest) returns (FindKNNResponse);
}

message FindKNNRequest {
    string dataPoint = 1; // The point to find neighbors for
    int32 k = 2;          // The number of neighbors to find
    int32 serverId = 3;  // Server identifier
}

message FindKNNResponse {
    string neighbors = 1; // List of nearest neighbors
}
